<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.codeitsuisse.team91.expensetracker.Income"
android:id="@+id/Income_layout"
android:background="#000">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/i_date_text"
    android:id="@+id/idate"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:textColor="#fff1fff8"
    android:textSize="20dp" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/i_date"
    android:id="@+id/isetdate"
    android:onClick="setDate"
    android:layout_below="@+id/idate"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="#ff27ff1e" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:ems="10"
    android:id="@+id/iamount_text"
    android:layout_below="@+id/i_amount"
    android:layout_marginBottom="10dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="20dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:textColor="#fff"
    android:textColorHint="#fff"
    android:hint="₹"
    android:textSize="20dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/i_amount_text"
    android:id="@+id/i_amount"
    android:layout_below="@+id/isetdate"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:textColor="#fff8fff1"
    android:textSize="20dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/i_selct_category"
    android:id="@+id/iselect_category"
    android:textColor="#ffffffff"
    android:textSize="20dp"
    android:layout_below="@+id/iamount_text"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<Spinner
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/idropdown"
    android:layout_marginBottom="10dp"
    android:prompt="@string/all_categories"
    android:entries="@array/income_categories"
    android:layout_below="@+id/iselect_category"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:spinnerMode="dropdown"
    android:background="#fff" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/i_description"
    android:id="@+id/description"
    android:layout_below="@+id/idropdown"
    android:layout_marginTop="10dp"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:textColor="#fffefffd"
    android:textSize="20dp" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/idescription_text"
    android:textColor="#fff"
    android:hint="(Optional)"
    android:textColorHint="#fff"
    android:layout_below="@+id/description"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/i_cancel_butt"
    android:id="@+id/icancel_button"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:background="#ffff3421" />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/i_save_butt"
    android:id="@+id/isave_button"
    android:background="#fffef415"
    android:layout_above="@+id/icancel_button"
    android:layout_marginBottom="5dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

</RelativeLayout>
